This is the first modification commit for Java Container on AKS